--- a/style.css
+++ b/style.css
@@ -27,6 +27,139 @@ h1 {
     width: 100%;
 }
 
+#adress {
+    position: absolute;
+    top: 165px;
+    left: 40%;
+}
+
+
+body
+
+/* Meny med inlogs rutorna */
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid rgb(53, 44, 90)cc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background: white;
+}
+
+/* style för alla knappar */
+button {
+    background-color: rgb(53, 44, 90);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px ;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    position: relative;
+    
+    
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* style för cancel knapp*/
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: rgb(133, 141, 176);
+    margin: 5% auto 15% auto;
+    width: 50%;
+    border: 1px;
+    border-radius: 10px;
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/*Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+
+    .cancelbtn {
+        width: 100%;
+    }
+}
+
 h2 {
     color: rgb(177, 156, 156);
     display: block;
@@ -34,6 +167,8 @@ h2 {
     margin-top: 0px;
     font-size: 35px;
 }
+
+
 
 /*
 img {
@@ -79,7 +214,7 @@ img {
     font-family: Helvetica;
     font-size: larger;
     color: rgb(36, 32, 50);
-    margin: -320px 0px 0px 420px; 
+    margin: -320px 0px 0px 420px;
 }
 
 .Andrea-pre-info {
@@ -91,7 +226,7 @@ img {
     border-radius: 5px;
     font-family: Helvetica;
     font-size: 20px;
-    color:  rgb(36, 32, 50);
+    color: rgb(36, 32, 50);
 }
 
 .Andrea-knapp {
@@ -103,7 +238,7 @@ img {
     border-radius: 5px;
     font-family: Helvetica;
     font-size: 20px;
-    color:  rgb(36, 32, 50);
+    color: rgb(36, 32, 50);
 }
 
 .Andrea-pre-info {
@@ -115,7 +250,7 @@ img {
     border-radius: 5px;
     font-family: Helvetica;
     font-size: 20px;
-    color:  rgb(36, 32, 50);
+    color: rgb(36, 32, 50);
 }
 
 /*Angelica*/
@@ -132,7 +267,7 @@ img {
     font-family: Helvetica;
     font-size: larger;
     color: rgb(36, 32, 50);
-    margin: -320px 0px 0px 120px; 
+    margin: -320px 0px 0px 120px;
 }
 
 
